<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="app_name">HomeTrainer</string>
    <string name="action_settings">Brustgurt auswählen</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="button_start_training">Starte Training</string>
    <string name="view_belt_address_hint">The Address of the Belt</string>
    <string name="view_belt_name_hint">The Name of the Belt</string>
    <string name="label_aktueller_puls">Aktueller Puls:</string>
    <string name="button_start_text">Training starten</string>
    <string name="training_started_text">Das Training ist gestartet</string>
    <string name="action_personal_settings_text">Persönliche Daten</string>
    <string name="age_conversion_failed_text">Ungültige Altersangabe</string>
    <string name="weight_validation_failure_text">Ungültigen Wert für das Gewicht eingegeben</string>
    <string name="pref_usersettings_key">UserSettings</string>
    <string name="toast_invalid_values_text">Bitte nochmal die eingegebenen Werte prüfem.</string>
    <string name="greetings_text">Hallo %s!</string>
    <string name="spinner_title">Trainingsmodus auswählen</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="used_hrbelt_text">Verwendeter Pulsmesser:</string>
    <string name="your_training_areas_text">Deine Trainingsbereiche</string>
    <string name="label_rekom_text">Regenerationsbereich (REKOM):</string>
    <string name="label_ga1_text">Grundlagenausdauer 1 (GA1) :</string>
    <string name="label_ga2_text">Grundlagenausdauer 2 (GA2) :</string>
    <string name="label_EB_text">Entwicklungsbereich (EB) :</string>
    <string name="label_sb_text">Spitzenbereich (SB) :</string>
    <string name="readygo_text">Und Los!</string>
    <string name="user_login_menu_text">Benutzeranmeldung</string>
    <string name="text_username">Benutzername</string>
    <string name="text_password">Passwort</string>
    <string name="text_login">Anmelden</string>
    <string name="text_registration">Wenn Sie noch keinen User angelegt haben,
        drücken Sie auf Registrieren</string>
    <string name="text_register_button">Registrieren</string>
    <string name="hint_user_pass_filled">Username und Passwort müssen ausgefüllt sein.</string>
    <string name="hint_user_pass_min_length">Username und Passwort müssen mehr als 1 Zeichen enthalten</string>
    <string name="text_full_name">Vollständiger Name</string>
    <string name="text_email_address">E-Mail-Adresse</string>
    <string name="text_go_more_relaxed">Mach lockerer!\nDu strengst Dich zu sehr an!</string>
    <string name="text_total_time">Gesamtzeit: </string>
    <string name="text_workout_step">Trainingsschritt: </string>


</resources>
