<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.heimbeeren.hometrainer.ChooseTraining"
    tools:showIn="@layout/activity_choose_training">
    <TextView android:id="@+id/view_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/view_belt_name_hint"/>
    <TextView android:id="@+id/view_device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/view_belt_address_hint"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_select_mode"
        android:prompt="@string/spinner_title"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start_training"
        android:id="@+id/but_start_training"/>
</LinearLayout>
