<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#08253c"
    tools:context=".UserLoginActivity">

    <TextView
        android:id="@+id/txv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        />
    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/txv_username"
        android:layout_alignLeft="@+id/txv_username"
        android:background="#ffffff"
        android:layout_alignStart="@+id/txv_username"/>
    <TextView
        android:id="@+id/txv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_below="@+id/edt_username"
        android:layout_alignStart="@+id/edt_username"
        android:layout_alignLeft="@+id/edt_username"
        android:layout_marginTop="30dp" />
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="#FFFFFF"
        android:layout_alignStart="@+id/txv_password"
        android:layout_below="@+id/txv_password"
        android:layout_alignLeft="@+id/txv_password"/>
    <Button
        android:id="@+id/but_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:layout_below="@+id/txv_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />
    <TextView
        android:id="@+id/txv_register_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_registration"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:layout_below="@+id/but_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_register_button"
        android:id="@+id/register_button"
        android:layout_below="@+id/txv_register_instruction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />
        />
</RelativeLayout>