<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/sophie_1"
        android:weightSum="1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/button_start_text"
        android:id="@+id/but_start"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom">
        <TextView
            android:layout_width="320dp"
            android:layout_height="180dp"
            android:lines="4"
            android:maxLines="4"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:textColor="#ffeb3b"
            android:textSize="28sp"
            android:id="@+id/txv_workout_step_details" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:id="@+id/countdown_timer_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtPulse_view"
        android:textSize="78sp"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:text="000"
        android:layout_gravity="left|bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="10dp"
        android:id="@+id/used_belt_name"
        android:layout_gravity="right|bottom" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:maxLines="2"
        android:textSize="48sp"
        android:id="@+id/text_Message"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/GREEN" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:orientation="vertical"
        android:background="@drawable/bottom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffee58"
            android:text="@string/text_total_time"
            android:textStyle="italic"/>
        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/chronometer"
            android:gravity="center"
            android:layout_gravity="center_horizontal|top"
            android:textSize="42sp"
            android:textColor="#33691e"
            android:paddingLeft="5dp" android:paddingRight="5dp"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffee58"
            android:text="@string/text_workout_step"
            android:textStyle="italic"/>
        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/chronometer"
            android:id="@+id/stepometer"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="42sp"
            android:textColor="#33691e"
            android:paddingLeft="5dp" android:paddingRight="5dp"
            android:textStyle="italic"
            android:textIsSelectable="false" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/imgFrontGear"
            android:layout_gravity="left|top"
            android:src="@drawable/vorne"/>

        <TextView
            android:id="@+id/txt_gear_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="30dp"
            android:textColor="#e0ef0c"
            android:textSize="40sp"
            android:text=""
            android:textStyle="italic"
            android:gravity="left|top"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/imgFrontGear"
            android:id="@+id/imgBackGear"
            android:layout_gravity="left|top"
            android:src="@drawable/hinten" />

        <TextView
            android:id="@+id/txt_gear_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="30dp"
            android:textColor="#e0ef0c"
            android:textStyle="italic"
            android:layout_toRightOf="@id/imgFrontGear"
            android:textSize="40sp"
            android:text=""
            android:gravity="left|top"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/imgSlope"
            android:layout_gravity="left|top"
            android:src="@drawable/slope"/>

        <TextView
            android:id="@+id/txt_slope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:textColor="#e0ef0c"
            android:textSize="35sp"
            android:text=""
            android:textStyle="italic"
            android:gravity="left|top"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="115dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/imgSlope"
            android:id="@+id/imgRPM"
            android:layout_gravity="left|top"
            android:src="@drawable/rpm" />

        <TextView
            android:id="@+id/txt_rpm_lower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="35dp"
            android:textColor="#e0ef0c"
            android:textStyle="italic"
            android:text=""
            android:textAlignment="center"
            android:layout_toRightOf="@id/imgSlope"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/txt_rpm_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="75dp"
            android:textColor="#e0ef0c"
            android:textStyle="italic"
            android:text=""
            android:textAlignment="center"
            android:layout_toRightOf="@id/imgSlope"
            android:textSize="35sp"/>
    </RelativeLayout>

</FrameLayout>
